foundation-objs/main/default/objects/CSM_Task_Creation__mdt/CSM_Task_Creation__mdt.object-meta.xml
<CustomObject>
    <label>CSM Task Creation</label>
    <pluralLabel>CSM Task Creations</pluralLabel>
</CustomObject>