foundation-objs/main/default/objects/CSM_Task_Creation__mdt/fields/Controlling_Field__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Field__c</fullName>
    <label>Controlling Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>