foundation-objs/main/default/objects/CSM_Task_Creation__mdt/fields/Due_Day_From_PO_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Day_From_PO_Start_Date__c</fullName>
    <label>Due Date From Controlling Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>