foundation-objs/main/default/objects/CSM_Task_Creation__mdt/fields/Due_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Due_Day_of_Month__c</fullName>
    <label>Due Day of Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>