foundation-objs/main/default/objects/CSM_Task_Creation__mdt/fields/Is_Integrated_Customer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Is_Integrated_Customer_Journey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Integrated Customer Journey</label>
    <type>Checkbox</type>
</CustomField>